base/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bolrea-malrea-backend
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:416963226971:certificate/0872753e-97ad-4367-a696-f0d42f8a8b46
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30,slow_start.duration_seconds=0
spec:
  ingressClassName: alb
  rules:
    # 커스텀 도메인 (HTTPS)
    - host: api.bolreamalrea.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bolrea-malrea-backend
                port:
                  number: 80
    # 기본 ALB 주소 (HTTP) - host 없음
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bolrea-malrea-backend
                port:
                  number: 80
